# agentspace

./: .dockerignore  .gitignore  Dockerfile  README.md  knicks_spurs_2026_nba_finals.docx.md  pyproject.toml  render.yaml
agents/assistant/: agent.yaml
agents/coder/: agent.yaml
agents/competitive-analyst/: agent.yaml
agents/data-analyst/: agent.yaml
agents/deep-researcher/: agent.yaml
agents/doc-writer/: agent.yaml
agents/files/: agent.yaml
agents/french-translator/: agent.yaml
agents/github/: agent.yaml
agents/gitops/: agent.yaml
agents/portfolio-tracker/: agent.yaml
agents/researcher/: agent.yaml
agents/scheduler/: agent.yaml
agents/shell-helper/: agent.yaml
agents/sports/: agent.yaml
agents/tech-writer/: agent.yaml
agents/watchdog/: agent.yaml
agents/web/: agent.yaml
agentspace/: __init__.py
agentspace/agent/: __main__.py  config.py  loop.py  mcp_client.py  pi_bridge.py  serve.py  server.py  sessions.py
agentspace/common/: paths.py  pricing.py  schedule.py  schemas.py
agentspace/host/: agent_factory.py  deploy.py  monitor.py  orchestrator.py  registry.py  remotes.py  scheduler.py  settings.py  shell.py  supervisor.py  telegram_bridge.py
docs/: AGENT_CONTRACT.md  DEPLOY.md  MCP.md  RECIPES.md  RUST_REWRITE_PLAN.md  TOOL_CONTRACT.md
mcp/: servers.yaml
scripts/: demo.py
skills/code-review/: SKILL.md
skills/coding/: SKILL.md
skills/data-analysis/: SKILL.md
skills/debugging/: SKILL.md
skills/planning/: SKILL.md
skills/prd/: SKILL.md
skills/sql/: SKILL.md
skills/summarize/: SKILL.md
(+22 files in other folders)
