[project]
name = "agentspace"
version = "0.1.0"
description = "A local agent runtime & workspace — a tiny agent OS for learning how agents work."
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.69",
    "fastapi>=0.115",
    "uvicorn>=0.30",
    "httpx>=0.27",
    "pyyaml>=6",
    "pydantic>=2",
    "prompt_toolkit>=3",
    "mcp>=1.27.2",
]

[project.scripts]
agentspace = "agentspace.host.shell:main"
agentspace-monitor = "agentspace.host.monitor:main"
agentspace-serve = "agentspace.agent.serve:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["agentspace"]
